--- a/0x02-i18n/templates/0-index.html
+++ b/0x02-i18n/templates/0-index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Holberton</title>
-</head>
-<body>
-    <h1>Hello world</h1>
-</body>
-</html>
+<!DOCTYPE HTML>
+<HTML lang="en">
+<HEAD>
+    <META charset="UTF-8">
+    <META name="viewport" content="width=device-width, initial-scale=1.0">
+    <TITLE>Welcome to Holberton</TITLE>
+</HEAD>
+<BODY>
+    <H1>Hello world</H1>
+</BODY>
+</HTML>
